--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "name": "@dreamer/middleware",
-  "version": "1.0.0-beta.2",
+  "version": "1.0.0-beta.3",
   "license": "MIT",
   "exports": {
     ".": "./src/mod.ts"
@@ -32,6 +32,7 @@
     }
   },
   "imports": {
-    "@dreamer/test": "jsr:@dreamer/test@^1.0.0-beta.6"
-  }
+    "@dreamer/test": "jsr:@dreamer/test@^1.0.0-beta.12"
+  },
+  "nodeModulesDir": "auto"
 }
