--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "name": "@dreamer/middleware",
-  "version": "1.0.0-beta.3",
+  "version": "1.0.0-beta.4",
   "license": "MIT",
   "exports": {
     ".": "./src/mod.ts"
@@ -32,7 +32,8 @@
     }
   },
   "imports": {
-    "@dreamer/test": "jsr:@dreamer/test@^1.0.0-beta.12"
+    "@dreamer/service": "jsr:@dreamer/service@^1.0.0-beta.3",
+    "@dreamer/test": "jsr:@dreamer/test@^1.0.0-beta.39"
   },
   "nodeModulesDir": "auto"
 }
